--- a/src/index.css
+++ b/src/index.css
@@ -13,19 +13,43 @@ code {
 }
 
 .wiicontainer {
+  margin: auto;
+  width: 50%;
+  padding: 10px;
+}
+
+.shaddiv {
+  left: 50%;
+  transform: translateX(-50%);
   position: relative;
+  z-index: 5;
+  margin-top: 20rem;
   text-align: center;
 }
+
 #todoS {
-  position: absolute;
-  top: 54%;
   left: 50%;
-  transform: translate(-50%, -50%);
-  width: 33%;
+  transform: translateX(-50%);
+  width: 75%;
   text-align: left;
+  position: relative;
+  z-index: 5;
+  margin-top: 14rem;
 }
-img {
-  width: 46%;
+
+.wowow {
+  width: 50%;
+  height: auto;
+}
+
+.backuroundu {
+  position: absolute;
+  top: 0;
+  left: 36rem;
+  bottom: 0;
+  z-index: 1;
+  width: 40%;
+  height: 97%;
 }
 
 input[type='date']:before {
@@ -41,8 +65,75 @@ input[type='date']:valid:before {
 
 i {
   cursor: pointer;
-  margin-right: -1rem;
-  margin-left: 2rem;
+  margin-right: 0rem;
+  margin-left: 0.7rem;
+}
+
+.inp {
+  position: relative;
+  margin: auto;
+  width: 100%;
+  max-width: 280px;
+}
+.inp .label {
+  position: absolute;
+  top: 16px;
+  left: 0;
+  font-size: 16px;
+  color: #9098a9;
+  font-weight: 500;
+  transform-origin: 0 0;
+  transition: all 0.2s ease;
+}
+.inp .border {
+  position: absolute;
+  bottom: 0;
+  left: 0;
+  height: 2px;
+  width: 100%;
+  background: #07f;
+  transform: scaleX(0);
+  transform-origin: 0 0;
+  transition: all 0.15s ease;
+}
+.inp input {
+  -webkit-appearance: none;
+  width: 100%;
+  border: 0;
+  font-family: inherit;
+  padding: 12px 0;
+  height: 48px;
+  font-size: 16px;
+  font-weight: 500;
+  border-bottom: 2px solid #c8ccd4;
+  background: none;
+  border-radius: 0;
+  color: #223254;
+  transition: all 0.15s ease;
+}
+.inp input:hover {
+  background: rgba(34, 50, 84, 0.03);
+}
+.inp input:not(:placeholder-shown) + span {
+  color: #5a667f;
+  transform: translateY(-26px) scale(0.75);
+}
+.inp input:focus {
+  background: none;
+  outline: none;
+}
+.inp input:focus + span {
+  color: #5a667f;
+  transform: translateY(-26px) scale(0.75);
+}
+.inp input:focus + span + .border {
+  transform: scaleX(1);
+}
+
+.wobble-hor-bottom {
+  margin-right: 18px;
+  margin-top: 10px;
+  color: #5a667f;
 }
 
 .wobble-hor-bottom:hover {
