--- a/src/index.css
+++ b/src/index.css
@@ -522,9 +522,10 @@ code {
 }
 #canOk {
   margin-top: 6px;
+  text-align: center;
 }
 #canOk .awos1 {
-  width: 20%;
+  width: 25%;
   text-align: left;
   text-transform: uppercase;
   border-radius: 7px;
@@ -532,7 +533,7 @@ code {
   padding: 2px;
 }
 #canOk .awos2 {
-  width: 20%;
+  width: 25%;
   text-align: left;
   text-transform: uppercase;
   border-radius: 7px;
